fixed browser sync

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!!</title>
 </head>
 <body>
-<h1>Hello Coursera! it's a great course bruh.bruh why is it not updati</h1>
+<h1>Hello Coursera! it's a great course I FIXED IT !!! nice shit nice bro </h1>
 </body>
 </html>
