randomly using tags in html

--- a/index.html
+++ b/index.html
@@ -5,5 +5,40 @@
 </head>
 <body>
 <h1>Hello Coursera!</h1>
+<rt>what is rt? its this </rt>
+<rtc>what is rtc? its even higher than rt</rtc>
+<ruby>ruby? tf is that </ruby>
+<table>wow table</table>
+<tbody>whats a tbody</tbody>
+<td>whats a td?</td>
+<textarea>text area? WOOOOOW</textarea>
+<th>whats th?</th>
+<thead>thead?</thead>
+<time>TIME???</time>
+<tr>tr?</tr>
+<tt>tt? wow font</tt>
+<u>u?? for underline wow</u>
+<ul>what about ul?</ul>
+<ul> ul?</ul>
+<ul>almost like a dialog innit?</ul>
+<i>what about i?</i>
+<ins>or ins? is it different than u?</ins>
+<isindex>is index?</isindex>
+<input type="password" name="field">
+<object>objects???</object>
+<ol>ol?</ol>
+<optgroup>opt group? nani</optgroup>
+<option>option?</option>
+<output>output?</output>
+<p>p? smallp?</p>
+<picture>picture?</picture>
+<pre>pre? wow smol font </pre>
+<param name="love" value="9">
+<acronym>acronym?</acronym>
+<address>address?</address>
+<applet>applet?</applet>
+<article>article?</article>
+<aside>aside?</aside>
+<audio src=""></audio>
 </body>
 </html>
