ok done fucking around lets continue the course

--- a/index.html
+++ b/index.html
@@ -40,5 +40,20 @@
 <article>article?</article>
 <aside>aside?</aside>
 <audio src=""></audio>
+<s>whats s? its srtikethrough</s>
+<samp>whats samp? some kind of weird font</samp>
+<section>whats a section?</section>
+<select><h6>option 1?</h6></select>
+<shadow>shadow?</shadow>
+<small>small speaks for itself </small>
+<span>span? who knows</span>
+<strong>strong? speaks for itself as well</strong>
+<sub>sub? subtitle?</sub>
+<summary>summary?</summary>
+<sup>sup? kinda smol</sup>
+<script type="text/javascript"></script>
+<source src="" type="">
+<style type="text/css"></style>
+<data>data?</data>
 </body>
 </html>
