--- a/index2.html
+++ b/index2.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="ar">
-<meta charset="utf-8">
+<html>
 <head>
-	<title>Hello Sidra!!</title>
+	<title>Hello Coursera!!</title>
 </head>
 <body>
-<h1 style="color:purple;font-size: 30px ; text-align: center"> هاااااااااي</h1>
-
-<p style="color:red; font-size: 60px; text-align: center" onclick="alert('بيشو بحبك كتيييير')"> كبسي هون </p>
+<h1 style="color:green;font-size: 66px ; text-align: center">Hello Coursera!</h1>
+<p style="color:red; font-size: 18px; text-align: center"> i eat ass</p>
 </body>
 </html>
