--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="utf-8">
 	<title>Hello Coursera!!</title>
+
 </head>
 <body>
 <h1 style="color:green;font-size: 66px ; text-align: center">Hello Coursera!</h1>
