learned about interal and external linking, still trying but whatever

--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,144 @@
 
 </head>
 <body>
-<h1 style="color:green;font-size: 66px ; text-align: center">Hello Coursera!</h1>
-<p style="color:red; font-size: 18px; text-align: center"> i eat ass</p>
+<h1 id ="top"><h1 style="color:green;font-size: 66px ; text-align: center;">Hello Coursera!</h1></h1>
+<ol>
+	<li><a href="#section1">Section 1</a></li>
+	<li><a href="#section2">Section 2</a></li>
+	<li><a href="#seciton3">Section 3</a></li>
+	<li><a href="#section4">Section 4</a></li>
+</ol>
+<p id = "section1"> <section style="color:red; font-size: 18px; text-align: center">i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass </section></p>
+
+<p id ="section2"> <section style="color:red; font-size: 18px; text-align: center" > Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+Recently Launched Guided Projects
+Most popular in Computer Science
+</section>
+<p id="seciton3">Section 3<section style="color:red; font-size: 18px; text-align: center">Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. </section></p>
+
+<p id="section4"><a href="#top">go back to the top</a></p>
 </body>
 </html>
