--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <h1 style="color:purple;font-size: 30px ; text-align: center"> هاااااااااي</h1>
 
 <p style="color:red; font-size: 60px; text-align: center" onclick="alert('بيشو بحبك كتيييير')"> كبسي هون </p>
+
+<p style="color:red; font-size: 60px; text-align: center"><a href="index2.html">كبيس هون لترجع </a></p>
 </body>
 </html>
