--- a/index2.html
+++ b/index2.html
@@ -6,16 +6,17 @@
 
 </head>
 <body>
-<h1 id ="top"><h1 style="color:green;font-size: 66px ; text-align: center;">Hello Coursera!</h1></h1>
+<h1 id ="top" style="color:green;font-size: 66px ; text-align: center;">Hello Coursera!</h1>
 <ol>
 	<li><a href="#section1">Section 1</a></li>
 	<li><a href="#section2">Section 2</a></li>
 	<li><a href="#seciton3">Section 3</a></li>
 	<li><a href="#section4">Section 4</a></li>
+	<li><a href="#section5">Section 5</a></li>
 </ol>
-<p id = "section1"> <section style="color:red; font-size: 18px; text-align: center">i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass </section></p>
+<p id = "section1"> <section style="color:red; font-size: 18px; text-align: center"> <h4>i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass</h4> </section>
 
-<p id ="section2"> <section style="color:red; font-size: 18px; text-align: center" > Recently Launched Guided Projects
+<p id ="section2"> <section style="color:red; font-size: 18px; text-align: center" > <h4> Recently Launched Guided Projects
 Most popular in Computer Science
 Recently Launched Guided Projects
 Most popular in Computer Science
@@ -55,8 +56,8 @@ Recently Launched Guided Projects
 Most popular in Computer Science
 Recently Launched Guided Projects
 Most popular in Computer Science
-</section>
-<p id="seciton3">Section 3<section style="color:red; font-size: 18px; text-align: center">Working with a team?
+</h4> </section>
+<p id="seciton3">Section 3<section style="color:red; font-size: 18px; text-align: center"> <h4>Working with a team?
 
 GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
 
@@ -142,8 +143,10 @@ GitHub is built for collaboration. Set up an organization to improve the way you
 
 GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
 
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. </section></p>
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features.</h4> </section>
 
-<p id="section4"><a href="#top">go back to the top</a></p>
+<p id="section4"><a href="index.html" target="_blank" > <section style="color:red; font-size: 18px; text-align: center"><h4>  do you love sidra? </h4></section> </a>
+
+<p id="section5"><a href="#top">go back to the top</a></p>
 </body>
 </html>
