--- a/index2.html
+++ b/index2.html
@@ -3,10 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<title>Hello Coursera!!</title>
+	<style>
+		section {
+			color:red;
+			font-size: 18px;
+			text-align: center;
+		}
+		h1 {
+			color:green;
+			font-size: 66px;
+			text-align: center;
+		}
 
+	</style>
 </head>
 <body>
-<h1 id ="top" style="color:green;font-size: 66px ; text-align: center;">Hello Coursera!</h1>
+<h1 id ="top">Hello Coursera!</h1>
 <ol>
 	<li><a href="#section1">Section 1</a></li>
 	<li><a href="#section2">Section 2</a></li>
@@ -14,139 +26,19 @@
 	<li><a href="#section4">Section 4</a></li>
 	<li><a href="#section5">Section 5</a></li>
 </ol>
-<p id = "section1"> <section style="color:red; font-size: 18px; text-align: center"> <h4>i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass i eat ass</h4> </section>
+<p id ="section1">Section 1&copy; <section> <h4>i eat ass </h4> </section></p>
 
-<p id ="section2"> <section style="color:red; font-size: 18px; text-align: center" > <h4> Recently Launched Guided Projects
+<p id ="section2">Section 2<section> <h4> Recently Launched Guided Projects
 Most popular in Computer Science
 Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
-Recently Launched Guided Projects
-Most popular in Computer Science
+
 </h4> </section>
-<p id="seciton3">Section 3<section style="color:red; font-size: 18px; text-align: center"> <h4>Working with a team?
+<p id="seciton3">Section 3<section> <h4>Working with a team?
 
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with&nbspa&nbsp;team?
+.</h4> </section>
+<p id="section4"> Section 4<a href="index.html" target="_blank" > <section ><h4>  do you love sidra? </h4></section> </a>
 
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a team?
-
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features.</h4> </section>
-
-<p id="section4"><a href="index.html" target="_blank" > <section style="color:red; font-size: 18px; text-align: center"><h4>  do you love sidra? </h4></section> </a>
-
-<p id="section5"><a href="#top">go back to the top</a></p>
+<p id="section5">Section 5 <Section><a href="#top">go back to the top</a></section></p>
 </body>
 </html>
