messing with css

--- a/index2.html
+++ b/index2.html
@@ -35,7 +35,7 @@ Recently Launched Guided Projects
 </h4> </section>
 <p id="seciton3">Section 3<section> <h4>Working with a team?
 
-GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with&nbspa&nbsp;team?
+GitHub is built for collaboration. Set up an organization to improve the way your team works together, and get access to more features. Working with a&nbsp;team?
 .</h4> </section>
 <p id="section4"> Section 4<a href="index.html" target="_blank" > <section ><h4>  do you love sidra? </h4></section> </a>
 
