fixed about me inline

--- a/index2.html
+++ b/index2.html
@@ -1,97 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
+<meta charset="utf-8">
 <head>
-	<meta charset="utf-8">
-	<title>Bashar Shehab</title>
-	<style>
-		body {
-			background-image:url("https://i.pinimg.com/564x/60/00/ca/6000caf22dfb0749d0a40d488eaa0dc7.jpg");
-		}
-		.aBitToTheRight {
-			float: right;
-			margin-right: 315px;
-		}
-		body h1 {
-			text-align: center;
-		}
-		div {
-			text-align: center;
-		}
-		#list li {
-			list-style: none;	
-		}
-
-		#Selection a:link, a:visited{
-			
-			text-decoration: none;
-			background-color: cyan;
-			border: 1px solid blue;
-			margin-bottom: 1px;
-			display: block;
-			width: 200px;
-			text-align: center;
-			color: purple;
-			
-		}
-		#Selection a:hover, a:active {
-			cursor: pointer;
-			background-color: blue;
-			color: white;
-		}
-	</style>
+	<title></title>
 </head>
 <body>
-	<h1>Hi! My name is Bashar. This website is a personal small project to build a web page about myself using HTML and CSS</h1>
-	<div><img style="border-radius: 120px 20px 20px 20px" src="https://lh3.googleusercontent.com/Yw7_bUQujZfZ9x3ATQ4ATM8Pp6QR-C_HYHre3foMJ--_OoYQtrvIblVFnVKwXFG44KhjbwdgmJMH16muXScjO-HbuZyQG8q7HtVohGA1oeHVcX9_tIQjzc7rKsQFvBZ-Y3RFtBYx4nNLimgvEkFyXAVXM8qf7UdOWFJsaeKT7Uzu3yWUFef_sMOfh5sYxcAtpm6cqjU2PZ5RdHANbbS6-5Ekd-UBxUC3M4grChfLTuvCy0_aHLEsSVgCTDeEEi5a_CVp8q8Q2AX0gdEQsyc0LU2P1GfBfy7-RpYUJafrR7uvLcH6qpppXBN-11S0ADPjLpIp1_nzSqwJKld8SLNcIIUvS9TxSNFVD6DlpBPPHVLvv5Sn14qdg4WnbdsTwGP4JZlITBbRjsClETv2xVNclEbSW7dQI6Bun7nLJsuXqDWoAPyIwU3P1MCznrQWIwdlelezqgmUiFkAcksgqLXy0mhpmSRDu5wtysj0UCkClSpPRC1tLYq-vY8GohkQ6FuPkcBgWhTuuIePqL5H-qfkQ9Vsqj_W1E7WRg1hlm5im0gSTcr_DymwDAZVQnsq2KNYGeg2fVcHmiETdQ0uTjLbWN6ZQJD0CTuB-ID5xjwK1uAhOOaywwZ9LlmtaZgK2g04n7Adu7H7irgdkBDPyv5k14raVlq_xmVzhMGgHq1CsRJJ-xJffX7_ohbBph0-=w803-h602-no?authuser=0" alt="Image of me and my friend" width ="208" height = "155"></div>
-	<div>(My friend Ahmad on the left, and my majesty on the right)</div>
-	<section id="Selection">
-		<ul id="list">
-			<li><a href="#AboutMe">About Me</a></li>
-			<li><a href="#SocialMedia">Social Media</a></li>
-			<li><a href="#Goals">Goals</a> </li>
-			<li><a href="#ContactMe">Contact Me</a></li>
-		</ul>
-	</section>
-	<section id="AboutMe">About Me:<ul>
-		<li>Name: Bashar Shehab-Uddin.</li>
-		<li>Birthday: 21/3/2001.</li>
-		<li>Nationality: Syrian.</li>
-		<li>Languages: <ul>
-			<li>Arabic : Native.</li>
-			<li>English : Fluent.</li>
-			<li>French: Very Basic.</li>
-			<li>Japanese: Very Basic</li>
-		</ul></li>
-		<li>Favourite Color: Dark Blue and Black.</li>
-		<li>Favourite Food: White rice and Shakriyeh (AKA Lamb Yogurt Stew).</li>
-		<li>Favourite Music Genre: R&B.</li>
-		<li>Favourite Singer: Joji (&Pink Guy).</li>
-		<li>Video Games I play: CSGO and Dota 2.</li>
-		<li>Favourite Anime: Clannad (& After Story), with One Piece being a close second.</li>
-		<li>Favourite Cartoon: Avatar: The last Airbender (FUCK Korra).</li>
-		<li>Favourite TV Show: Breaking Bad, then Sherlock.</li>
-		<li>Pineapple on Pizza? Who cares? although I have not tried it myself.</li>
-		<li>Other things I would like to say: I have spring allergy. Can't take the heat well. 19Y/O. Top of the morning to ya.</li>
-	</ul></section>
-	<section id="SocialMedia">Social Media:
-		<ul>
-			<li><a href="https://www.youtube.com/channel/UCyTd6PSz0ptTBn6Ip96abaQ?view_as=subscriber">Youtube</a> (I don't post a lot).</li>
-			<li>I don't use any more poison :) .</li>
-		</ul>
-	</section>
-	<section id="Goals">
-		Goals
-		<div class="aBitToTheRight"> I could sit here and talk about how much I wish for world peace but let's not waste eachothers time. I just want to leave Syria and start a new life. ¯\_(ツ)_/¯.
-		</div>
-	</section>
-	<section id="ContactMe">Contact Me:
-		<ul>
-			<li>Phone Number (What'sApp and Telegram): +963 937 875 593.</li>
-			<li>Gmail: Beshrshehab999@gmail.com.</li>
-			<li>Address: <address style="display: inline;">Al-Khateeb, 5th Avenue, Damascus, Syria.</address></li>
 
-		</ul>
-	</section>
 </body>
-
 </html>
