ok new progress?

--- a/MainPage.html
+++ b/MainPage.html
@@ -3,14 +3,21 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="keywords" content="bashar,shehab,teen,student,web dev, web developer, programmer,lifter, sport, rpi, raspberry pi, networking, html, css, javascript">
-	<meta name="description" content="Bashar Shehab is a Syrian web developer, Java and C/C++ developer and a student at Al-Sham Private University">
+	<meta name="description" content="Bashar Shehab is a Syrian web developer, Java developer, C/C++ developer and a student at Al-Sham Private University">
 	<link href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,900" rel="stylesheet">
 	<title>Bashar Shehab</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<section class="pic"><div> <a href="https://basharbruh.github.io/courseratest/MainPage.html"><img src="me.jpg" width ="208" height = "208" ></a></div><span>This is me, Bashar!</span></section>
+
 	<h1>Hi! My name is Bashar. This website is a personal small project to build a web page about myself using HTML and CSS</h1>
 
-	<section class="pic"><div><img src="https://cutt.ly/7fTVDNG" alt="Image of me and my friend" width ="208" height = "155"></div></section>
+	<section class="select">
+		 <ul>
+			<li><div><a id="AboutMe" href="">about me</a></div></li>
+			<li><div><a id="Resume" href="">resume</a></div></li>
+		</ul>
+	</section>
 </body>
 </html>
