last push before another lecture

--- a/MainPage.html
+++ b/MainPage.html
@@ -15,8 +15,8 @@
 
 	<section class="select">
 		 <ul>
-			<li><div><a id="AboutMe" href="">about me</a></div></li>
-			<li><div><a id="Resume" href="">resume</a></div></li>
+			<li><span><a id="AboutMe" href="">about me</a></span></li>
+			<li><span><a id="Resume" href="">resume</a></span></li>
 		</ul>
 	</section>
 </body>
