--- a/MainPage.html
+++ b/MainPage.html
@@ -11,7 +11,8 @@
 <body>
 	<section class="pic"><div> <a href="https://basharbruh.github.io/BasharShehab/MainPage.html"><img src="me.jpg" width ="208" height = "208" ></a></div><span>This is me, Bashar!</span></section>
 
-	<h1>Hi! My name is Bashar. This website is a personal small project to build a web page about myself using HTML and CSS</h1>
+	<h1>Welcome!</h1>
+	<p>This website is a personal small project to build a website about myself using HTML and CSS</p>
 
 	<section class="select">
 		 <ul>
