--- a/index.html
+++ b/index.html
@@ -1,62 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="utf-8">
+	<meta name="keywords" content="bashar,shehab,teen,student,web dev, web developer, programmer,lifter, sport, rpi, raspberry pi, networking, html, css, javascript, java, c++, flutter, dart">
+	<meta name="description" content="Bashar Shehab is a Syrian web developer, Java, C/C++,flutter developer and a student at Al-Sham Private University">
+	<link href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,900" rel="stylesheet">
 	<title>Bashar Shehab</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	
 </head>
 <body>
-	<section id="Selection">
-		<ul id="list">
-			<li><a href="#AboutMe">About Me</a></li>
-			<li><a href="#SocialMedia">Social Media</a></li>
-			<li><a href="#Goals">Goals</a> </li>
-			<li><a href="#ContactMe">Contact Me</a></li>
-		</ul>
-	</section>
-	<section id="AboutMe" > About Me:
-		<ul>
-		<li>Name: Bashar Shehab-Uddin.</li>
-		<li>Birthday: 21/3/2001.</li>
-		<li>Nationality: Syrian.</li>
-		<li>Languages: <ul>
-			<li>Arabic : Native.</li>
-			<li>English : Fluent.</li>
-			<li>French: Very Basic.</li>
-			<li>Japanese: Very Basic</li>
-		</ul></li>
-		<li>Favourite Color: Dark Blue and Black.</li>
-		<li>Favourite Food: White rice and Shakriyeh (AKA Lamb Yogurt Stew).</li>
-		<li>Favourite Music Genre: R&B.</li>
-		<li>Favourite Singer: Joji (&Pink Guy).</li>
-		<li>Video Games I play: CSGO and Dota 2.</li>
-		<li>Favourite Anime: Clannad (& After Story), with One Piece being a close second.</li>
-		<li>Favourite Cartoon: Avatar: The last Airbender (FUCK Korra).</li>
-		<li>Favourite TV Show: Breaking Bad, then Sherlock.</li>
-		<li>Pineapple on Pizza? Who cares? although I have not tried it myself.</li>
-		<li>Other things I would like to say: I have spring allergy. Can't take the heat well. 19Y/O. Top of the morning to ya.</li>
-		</ul>
-	</section>
-	<section id="SocialMedia">Social Media:
-		<ul>
-			<li><a href="https://www.youtube.com/channel/UCyTd6PSz0ptTBn6Ip96abaQ?view_as=subscriber">Youtube</a> (I don't post a lot).</li>
-			<li>I don't use any more poison :) .</li>
-		</ul>
-	</section>
-	<section id="Goals">
-		Goals
-		<div class="aBitToTheRight"> I could sit here and talk about how much I wish for world peace but let's not waste eachothers time. I just want to leave Syria and start a new life. ¯\_(ツ)_/¯.
-		</div>
-	</section>
-	<section id="ContactMe">Contact Me:
-		<ul>
-			<li>Phone Number (What'sApp and Telegram): +963 937 875 593.</li>
-			<li>Gmail: Beshrshehab999@gmail.com.</li>
-			<li>Address: <address style="display: inline;">Al-Khateeb, 5th Avenue, Damascus, Syria.</address></li>
+	<section class="pic"><div> <a href="https://basharbruh.github.io/BasharShehab/MainPage.html"><img src="me.jpg" width ="208" height = "208" ></a></div><span>This is me, Bashar!</span></section>
 
+	<h1>Welcome!</h1>
+	<p>This website is a personal small project to build a website about myself using HTML and CSS</p>
+
+	<section class="select">
+		 <ul>
+			<li><span><a id="AboutMe" href="About.html">about me</a></span></li>
+			<li><span><a id="Resume" href="">CV</a></span></li>
 		</ul>
 	</section>
 </body>
-
 </html>
