redesigning base done, final touches soon

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="keywords" content="bashar,shehab,teen,student,web dev, web developer, programmer,lifter, sport, rpi, raspberry pi, networking, html, css, javascript, java, c++, flutter, dart">
@@ -8,17 +8,95 @@
 	<title>Bashar Shehab</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-	<section class="pic"><div> <a href="https://basharbruh.github.io/BasharShehab/MainPage.html"><img src="me.jpg" width ="208" height = "208" ></a></div><span>This is me, Bashar!</span></section>
 
-	<h1>Welcome!</h1>
-	<p>This website is a personal small project to build a website about myself using HTML and CSS</p>
+<body>
+	<header class="header">
+		<nav class="Nav"> 
+			<a class="AboutMe" href="#aboutMe"><span>About Me</span></a>
+			<a class="ContactMe" href="#ContactMe"><span>Contact Me</span></a>
+		</nav>	
+	</header>
+
+	<section class="pic">
+		<div> 
+			<a href="https://basharbruh.github.io/BasharShehab/MainPage.html">
+				<img src="me.jpg" width ="208" height = "208" alt="An image of Bashar Shehab" >
+			</a>
+		</div>
+		<span>This is me, Bashar!</span>
+	</section>
+
+	<section class="welcome">
+		<h1>Welcome :)</h1>
+		<p>
+		This website is a personal fun project to build a website about myself using HTML and CSS</p>
+	</section>
+
+	<hr width="25%" size="1">
 
 	<section class="select">
-		 <ul>
-			<li><span><a id="AboutMe" href="About.html">about me</a></span></li>
-			<li><span><a id="Resume" href="">CV</a></span></li>
-		</ul>
+		<a id="Resume" href="BasharCV.pdf">CV</a>
 	</section>
+
+	<hr width="10%" size="1">
+
+	<section class="socialMedia" id="socialMedia">
+		<a class="github" href="https://github.com/BasharShehab">
+			<img src="icons/github.png" width="38" height="38" alt="My github"></a>
+		<a class="youtube" href="https://www.youtube.com/channel/UCyTd6PSz0ptTBn6Ip96abaQ">
+			<img src="icons/youtube.png" width ="38" height = "38" alt="YouTube Channel"></a>
+		<a class="Instagram" href="https://www.instagram.com/bashar_shehab01/">
+			<img src="icons/instagram.png" width ="38" height = "38" alt="Instagram"></a>
+	</section>
+
+	<section class="aboutMe" id="aboutMe">
+		<h1>About Me...</h1>
+
+		<p>On my ID, my name is Bashar Shihab Eedin, but I go by Bashar Shehab. <br> I was born on the 21st of March, 2001. Hence it being a blessed day. <br>
+		I am Syrian, and I live in Damascus, Syria. <br>
+		I speak Arabic, English, a bit of Japanese and French, and currently learning German.
+		</p>
+
+	</section>
+
+	<section class="favourites" id="favourites">
+		<H1>My Favourite. . .</H1>
+		<p>
+			<ul>
+				<li>Color: Deep Blue, Black. <br> </li>
+				<li>Food: Chicken Yogurt Stew with White Rice, some call it Mansaf. <br></li>
+				<li>Music Artist: <a href="https://www.youtube.com/channel/UCFl7yKfcRcFmIUbKeCA-SJQ">Joji</a>. favourite genre is R&B, soul. <br> </li>
+				<li>Multiplayer video games: Dota 2 and CS:GO. <br></li>
+				<li>Single Player video game: Life is Strange, and the Portal games. <br> </li>
+				<li>TV Show: Breaking Bad, Sherlock. <br> </li>
+				<li>Anime: Clannad (& Clannad After Story), One Piece. <br></li>
+				<li>Cartoon: Avatar: The Last Airbender. (seriously, go watch it! ). <br></li>
+			</ul>
+		</p>
+
+	</section>
+
+	<section class="goals" id="goals">
+		<h1>My goals...</h1>
+		<p>
+			I could sit here and talk about how much I wish for world peace but let's not waste eachothers time. I just want to leave Syria and start a new life. ¯\_(ツ)_/¯.
+		</p>
+	</section>
+
+	<section class="other" id="other">
+		<h1>Other things I'd like to say...</h1>	
+		<p>Pineapple on Pizza? Who cares? Although I have not tried it myself. <br>
+		I have spring allergy. Can't take the heat well. Top of the morning to ya.</p>
+	</section>
+
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<section class="footer" id="footer"> 
+			<ul>
+				<li>Phone Number (What'sApp and Telegram): +963 937 875 593.</li>
+				<li>Gmail: Beshrshehab999@gmail.com.</li>
+				<li>Address: <address style="display: inline;">Al-Khateeb, 5th Avenue, Damascus, Syria.</address></li>
+			</ul>
+	</section>
+
 </body>
 </html>
