redesigning almost done. Cleaning things up in 3.. 2.. 1..

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <body>
 	<header class="header">
 		<nav class="Nav"> 
-			<a class="AboutMe" href="#aboutMe"><span>About Me</span></a>
-			<a class="ContactMe" href="#ContactMe"><span>Contact Me</span></a>
+			<a href="#aboutMe"><span>About Me</span></a>
+			<a class="favourites" href="#favourites"><span>My Favourites</span></a>
+			<a class="goals" href="#goals"><span>My Goals</span></a>
+			<a class="other" href="#other"><span>Other & Contact</span></a>
 		</nav>	
 	</header>
-
 	<section class="pic">
 		<div> 
 			<a href="https://basharbruh.github.io/BasharShehab/MainPage.html">
@@ -32,13 +33,13 @@
 		This website is a personal fun project to build a website about myself using HTML and CSS</p>
 	</section>
 
-	<hr width="25%" size="1">
+	<hr style="width:25%;">
 
 	<section class="select">
 		<a id="Resume" href="BasharCV.pdf">CV</a>
 	</section>
 
-	<hr width="10%" size="1">
+	<hr style="width:10%;">
 
 	<section class="socialMedia" id="socialMedia">
 		<a class="github" href="https://github.com/BasharShehab">
@@ -52,41 +53,42 @@
 	<section class="aboutMe" id="aboutMe">
 		<h1>About Me...</h1>
 
-		<p>On my ID, my name is Bashar Shihab Eedin, but I go by Bashar Shehab. <br> I was born on the 21st of March, 2001. Hence it being a blessed day. <br>
+		<p style="float: left">On my ID, my name is Bashar Shihab Eedin, but I go by Bashar Shehab. <br> I was born on the 21st of March, 2001. Hence it being a blessed day. <br>
 		I am Syrian, and I live in Damascus, Syria. <br>
 		I speak Arabic, English, a bit of Japanese and French, and currently learning German.
 		</p>
+				<img src="icons/google.png" height="300" width="300" style="float: right;" alt="Image About Bashar Shehab">
 
 	</section>
 
 	<section class="favourites" id="favourites">
 		<H1>My Favourite. . .</H1>
-		<p>
-			<ul>
-				<li>Color: Deep Blue, Black. <br> </li>
-				<li>Food: Chicken Yogurt Stew with White Rice, some call it Mansaf. <br></li>
-				<li>Music Artist: <a href="https://www.youtube.com/channel/UCFl7yKfcRcFmIUbKeCA-SJQ">Joji</a>. favourite genre is R&B, soul. <br> </li>
-				<li>Multiplayer video games: Dota 2 and CS:GO. <br></li>
-				<li>Single Player video game: Life is Strange, and the Portal games. <br> </li>
-				<li>TV Show: Breaking Bad, Sherlock. <br> </li>
-				<li>Anime: Clannad (& Clannad After Story), One Piece. <br></li>
-				<li>Cartoon: Avatar: The Last Airbender. (seriously, go watch it! ). <br></li>
-			</ul>
+		<p style="float: left;">
+			Color: Deep Blue, Black. <br> 
+			Food: Chicken Yogurt Stew with White Rice, some call it Mansaf. <br>
+			Music Artist: <a href="https://www.youtube.com/channel/UCFl7yKfcRcFmIUbKeCA-SJQ">Joji</a>. favourite genre is R&B, soul. <br> 
+			Multiplayer video games: Dota 2 and CS:GO. <br>
+			Single Player video game: Life is Strange, and the Portal games. <br> 
+			TV Show: Breaking Bad, Sherlock. <br> 
+			Anime: Clannad (& Clannad After Story), One Piece. <br>
+			Cartoon: Avatar: The Last Airbender. (seriously, go watch it! ). <br>
 		</p>
-
+			<img src="icons/google.png" height="300" width="300" style="float: right;" alt="Image about Bashar Shehab's Favourite Things">
 	</section>
 
 	<section class="goals" id="goals">
 		<h1>My goals...</h1>
-		<p>
+		<p style="float: left;">
 			I could sit here and talk about how much I wish for world peace but let's not waste eachothers time. I just want to leave Syria and start a new life. ¯\_(ツ)_/¯.
 		</p>
+		<img src="icons/google.png" height="300" width="300" style="float: right;" alt="Image About Bashar Shehab's Goals">
 	</section>
 
 	<section class="other" id="other">
 		<h1>Other things I'd like to say...</h1>	
-		<p>Pineapple on Pizza? Who cares? Although I have not tried it myself. <br>
+		<p style="float: left;">Pineapple on Pizza? Who cares? Although I have not tried it myself. <br>
 		I have spring allergy. Can't take the heat well. Top of the morning to ya.</p>
+		<img src="icons/google.png" height="300" width="300" style="float: right;" alt="Image About Other Things About Bashar">
 	</section>
 
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
