i think its done?

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 		I am Syrian, and I live in Damascus, Syria. <br>
 		I speak Arabic, English, a bit of Japanese and French, and currently learning German.
 		</p>
-				<img src="icons/google.png" height="300" width="300" style="float: right;" alt="Image About Bashar Shehab">
+		<img src="meCollection.png" height="600" width="590" style="float: right;" alt="Image About Bashar Shehab">
 
 	</section>
 
-	<section class="favourites" id="favourites">
-		<H1>My Favourite. . .</H1>
+	<section class="favourites" id="favourites">	
+	<h1>My Favourite. . .</h1>
 		<p style="float: left;">
 			Color: Deep Blue, Black. <br> 
 			Food: Chicken Yogurt Stew with White Rice, some call it Mansaf. <br>
@@ -73,7 +73,7 @@
 			Anime: Clannad (& Clannad After Story), One Piece. <br>
 			Cartoon: Avatar: The Last Airbender. (seriously, go watch it! ). <br>
 		</p>
-			<img src="icons/google.png" height="300" width="300" style="float: right;" alt="Image about Bashar Shehab's Favourite Things">
+	<img src="favourites.png" height="650" width="650" style="float: right;" alt="Image about Bashar Shehab's Favourite Things" >
 	</section>
 
 	<section class="goals" id="goals">
@@ -81,14 +81,16 @@
 		<p style="float: left;">
 			I could sit here and talk about how much I wish for world peace but let's not waste eachothers time. I just want to leave Syria and start a new life. ¯\_(ツ)_/¯.
 		</p>
-		<img src="icons/google.png" height="300" width="300" style="float: right;" alt="Image About Bashar Shehab's Goals">
+		<img src="syria.png" height="650" width="650" style="float: right;" alt="Image About Bashar Shehab's Goals">
 	</section>
 
 	<section class="other" id="other">
 		<h1>Other things I'd like to say...</h1>	
 		<p style="float: left;">Pineapple on Pizza? Who cares? Although I have not tried it myself. <br>
-		I have spring allergy. Can't take the heat well. Top of the morning to ya.</p>
-		<img src="icons/google.png" height="300" width="300" style="float: right;" alt="Image About Other Things About Bashar">
+		I have spring allergy. Can't take the heat well. Top of the morning to ya. <br>
+		Shameless plug: Life is hard here, so feel free to help :) <br> BitCoin is currently the only way I am able to receive from this godforsaken place.
+	</p>
+		<img src="myBitcoinWallet.png" height="650" width="650" style="float: right;" alt="Image About Other Things About Bashar">
 	</section>
 
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -96,6 +98,7 @@
 			<ul>
 				<li>Phone Number (What'sApp and Telegram): +963 937 875 593.</li>
 				<li>Gmail: Beshrshehab999@gmail.com.</li>
+				<li>Bitcoin Wall: bc1qkdpdwqt39epnmrnahfmjvaxxnxyz93lar6qy96</li>
 				<li>Address: <address style="display: inline;">Al-Khateeb, 5th Avenue, Damascus, Syria.</address></li>
 			</ul>
 	</section>
