attempt to fix mobile view?? #2

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 		<h1>Other things I'd like to say...</h1>	
 		<p style="float: left;">Pineapple on Pizza? Who cares? Although I have not tried it myself. <br>
 		I have spring allergy. Can't take the heat well. Top of the morning to ya. <br>
-		Shameless plug: Life is hard here, so feel free to help :) <br> BitCoin is currently the only way I am able to receive from this godforsaken place.
+		Shameless plug: Life is hard here, so feel free to help :) <br> BitCoin is currently the only way I am able to receive from this godforsaken place. <br>
+		Scroll down for contact info.
 	</p>
 		<img src="myBitcoinWallet.png" height="650" width="650" style="float: right;" alt="Image About Other Things About Bashar">
 	</section>
