attempt to fix mobile view?? #2 deleted margins spammed <hr>

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 			<img src="icons/instagram.png" width ="38" height = "38" alt="Instagram"></a>
 	</section>
 
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<section class="aboutMe" id="aboutMe">
 		<h1>About Me...</h1>
 
@@ -61,6 +62,8 @@
 
 	</section>
 
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	
 	<section class="favourites" id="favourites">	
 	<h1>My Favourite. . .</h1>
 		<p style="float: left;">
@@ -75,7 +78,7 @@
 		</p>
 	<img src="favourites.png" height="650" width="650" style="float: right;" alt="Image about Bashar Shehab's Favourite Things" >
 	</section>
-
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<section class="goals" id="goals">
 		<h1>My goals...</h1>
 		<p style="float: left;">
@@ -83,7 +86,7 @@
 		</p>
 		<img src="syria.png" height="650" width="650" style="float: right;" alt="Image About Bashar Shehab's Goals">
 	</section>
-
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<section class="other" id="other">
 		<h1>Other things I'd like to say...</h1>	
 		<p style="float: left;">Pineapple on Pizza? Who cares? Although I have not tried it myself. <br>
@@ -94,8 +97,7 @@
 		<img src="myBitcoinWallet.png" height="650" width="650" style="float: right;" alt="Image About Other Things About Bashar">
 	</section>
 
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<section class="footer" id="footer"> 
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>	<section class="footer" id="footer"> 
 			<ul>
 				<li>Phone Number (What'sApp and Telegram): +963 937 875 593.</li>
 				<li>Gmail: Beshrshehab999@gmail.com.</li>
