--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		</p>
 		<img src="syria.png" height="650" width="650" style="float: right;" alt="Image About Bashar Shehab's Goals">
 	</section>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<section class="other" id="other">
 		<h1>Other things I'd like to say...</h1>	
 		<p style="float: left;">Pineapple on Pizza? Who cares? Although I have not tried it myself. <br>
@@ -97,11 +97,12 @@
 		<img src="myBitcoinWallet.png" height="650" width="650" style="float: right;" alt="Image About Other Things About Bashar">
 	</section>
 
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>	<section class="footer" id="footer"> 
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<section class="footer" id="footer"> 
 			<ul>
 				<li>Phone Number (What'sApp and Telegram): +963 937 875 593.</li>
 				<li>Gmail: Beshrshehab999@gmail.com.</li>
-				<li>Bitcoin Wall: bc1qkdpdwqt39epnmrnahfmjvaxxnxyz93lar6qy96</li>
+				<li>Bitcoin Wallet: bc1qkdpdwqt39epnmrnahfmjvaxxnxyz93lar6qy96</li>
 				<li>Address: <address style="display: inline;">Al-Khateeb, 5th Avenue, Damascus, Syria.</address></li>
 			</ul>
 	</section>
