updated layout and spacing. Thanks Michael! <3

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
 	<header class="header">
 		<nav class="Nav"> 
 			<a href="#aboutMe"><span>About Me</span></a>
@@ -18,40 +19,45 @@
 			<a class="other" href="#other"><span>Other & Contact</span></a>
 		</nav>	
 	</header>
-	<section class="pic">
-		<div> 
+
+
+	<section class="firstPanel"> 
+		<div class="pic"> 
 			<a href="https://basharbruh.github.io/BasharShehab/MainPage.html">
 				<img src="me.jpg" width ="208" height = "208" alt="An image of Bashar Shehab" >
 			</a>
 		</div>
+
 		<span>This is me, Bashar!</span>
+
+		<section class="welcome">
+			<h1>Welcome :)</h1>
+			<p>
+			This website is a personal fun project to build a website about myself using HTML and CSS</p>
+		</section>
+
+		<hr style="width:25%;">
+
+		<section class="select">
+			<a id="Resume" href="BasharCV.pdf">CV</a>
+		</section>
+
+		<hr style="width:10%;">
+
+		<section class="socialMedia" id="socialMedia">
+			<a class="github" href="https://github.com/BasharShehab">
+				<img src="icons/github.png" width="38" height="38" alt="My github"></a>
+			<a class="youtube" href="https://www.youtube.com/channel/UCyTd6PSz0ptTBn6Ip96abaQ">
+				<img src="icons/youtube.png" width ="38" height = "38" alt="YouTube Channel"></a>
+			<a class="Instagram" href="https://www.instagram.com/bashar_shehab01/">
+				<img src="icons/instagram.png" width ="38" height = "38" alt="Instagram"></a>
+		</section>
+
 	</section>
 
-	<section class="welcome">
-		<h1>Welcome :)</h1>
-		<p>
-		This website is a personal fun project to build a website about myself using HTML and CSS</p>
-	</section>
 
-	<hr style="width:25%;">
-
-	<section class="select">
-		<a id="Resume" href="BasharCV.pdf">CV</a>
-	</section>
-
-	<hr style="width:10%;">
-
-	<section class="socialMedia" id="socialMedia">
-		<a class="github" href="https://github.com/BasharShehab">
-			<img src="icons/github.png" width="38" height="38" alt="My github"></a>
-		<a class="youtube" href="https://www.youtube.com/channel/UCyTd6PSz0ptTBn6Ip96abaQ">
-			<img src="icons/youtube.png" width ="38" height = "38" alt="YouTube Channel"></a>
-		<a class="Instagram" href="https://www.instagram.com/bashar_shehab01/">
-			<img src="icons/instagram.png" width ="38" height = "38" alt="Instagram"></a>
-	</section>
-
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<section class="aboutMe" id="aboutMe">
+
 		<h1>About Me...</h1>
 
 		<p style="float: left">On my ID, my name is Bashar Shihab Eedin, but I go by Bashar Shehab. <br> I was born on the 21st of March, 2001. Hence it being a blessed day. <br>
@@ -62,8 +68,7 @@
 
 	</section>
 
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	
+
 	<section class="favourites" id="favourites">	
 	<h1>My Favourite. . .</h1>
 		<p style="float: left;">
@@ -78,7 +83,8 @@
 		</p>
 	<img src="favourites.png" height="650" width="650" style="float: right;" alt="Image about Bashar Shehab's Favourite Things" >
 	</section>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
 	<section class="goals" id="goals">
 		<h1>My goals...</h1>
 		<p style="float: left;">
@@ -86,7 +92,8 @@
 		</p>
 		<img src="syria.png" height="650" width="650" style="float: right;" alt="Image About Bashar Shehab's Goals">
 	</section>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
 	<section class="other" id="other">
 		<h1>Other things I'd like to say...</h1>	
 		<p style="float: left;">Pineapple on Pizza? Who cares? Although I have not tried it myself. <br>
@@ -97,7 +104,7 @@
 		<img src="myBitcoinWallet.png" height="650" width="650" style="float: right;" alt="Image About Other Things About Bashar">
 	</section>
 
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
 	<section class="footer" id="footer"> 
 			<ul>
 				<li>Phone Number (What'sApp and Telegram): +963 937 875 593.</li>
@@ -105,6 +112,10 @@
 				<li>Bitcoin Wallet: bc1qkdpdwqt39epnmrnahfmjvaxxnxyz93lar6qy96</li>
 				<li>Address: <address style="display: inline;">Al-Khateeb, 5th Avenue, Damascus, Syria.</address></li>
 			</ul>
+
+			<span>
+				Feel free to contact me for anything. Everything here and on my github is free to use 
+			</span>
 	</section>
 
 </body>
